<resources>
    <string name="app_name">GeckTrack</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="need_care_tips_select_a_gecko">Need Care Tips? Select a Gecko!</string>
    <string name="welcome_to_gecktrack">Welcome to GeckTrack!</string>
    <string name="temp_string">Upcoming Events Will Display Here</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_gecks">My Gecks</string>
    <string name="save">Save</string>
    <string name="select_quot_save_quot_to_save_changes_select_quot_cancel_quot_to_go_back">Select \"Save\" to save changes, select \"Cancel\" to go back.</string>
    <string name="cancel">Cancel</string>
    <string name="insert_your_gecko_s_information">You\'re adding a new gecko! Insert your gecko\'s information!</string>
    <string name="name">Name</string>
    <string name="purchased_from">Purchased From</string>
    <string name="weight">Weight</string>
    <string name="morph">Morph</string>
    <string name="species">Species</string>
    <string name="birthday">Birthday</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="enter_your_gecko_s_name">Enter your gecko\'s name</string>
    <string name="seller">Seller</string>
    <string name="enter_weight_in_grams">Enter weight in grams</string>
    <string name="enter_your_gecko_s_morph">Enter your gecko\'s morph</string>
    <string name="enter_your_gecko_s_birthday">Enter your gecko\'s birthday</string>
    <string name="_0">0</string>
    <string name="where_is_this_gecko_from">Where is this gecko from?</string>
    <string name="farenheit_symbol">°F</string>
    <string name="string_humidity_percentage">%</string>
    <string name="photo">Photo</string>
    <string name="no_photo_added">No photo added</string>
    <string name="select_a_species">Select a species</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="status">Status</string>
    <string name="select_a_status">Select a status</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="_0_0">0.0</string>
    <string name="grams_g">grams (g)</string>
    <string name="_000_00">000.00</string>
    <string name="enter_a_species">Enter a species</string>
    <string name="gecko_photo">Gecko Photo</string>
    <string name="gecko_name_placeholder">Gecko Name Placeholder</string>
    <string name="age">Age</string>
    <string name="feeding">Feeding</string>
    <string name="cleaning">Cleaning</string>
    <string name="weighing">Weighing</string>
    <string name="health">Health</string>
    <string name="appointment">Appointment</string>
    <string name="breeding">Breeding</string>
    <string name="other">Other</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="section_border">___________________________________________________________</string>
    <string name="shedding">Shedding</string>
    <string name="calendar">Calendar</string>
    <string name="insert_event_information">Insert event information!</string>
    <string name="off">OFF</string>
    <string name="time">Time</string>
    <string name="for_gecko_s">For Gecko(s)</string>
    <string name="select_a_type">select a type</string>
    <string name="enter_a_name_for_event">Enter a name for event</string>
    <string name="event_name">Event Name</string>
    <string name="date">Date</string>
    <string name="event_type">Event Type</string>
    <string name="notifications">Notifications</string>
    <string name="notes">Notes</string>
    <string name="in_format_hh_mm">In format hh:mm</string>
    <string name="in_format_mm_dd_yyyy">In format mm/dd/yyyy</string>
    <string name="add_any_notes_for_this_event_describe_it_or_add_important_points">Add any notes for this event, describe it, or add important points!</string>
    <string name="hh_mm">hh:mm</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="the_user_s_gecko">the user\'s gecko</string>
    <string name="photo_selected">Photo Selected</string>
    <string name="no_photo">No photo</string>
    <string name="unknown">Unknown</string>
    <string name="all_geckos">All geckos</string>
    <string name="disabled">Disabled</string>
    <string name="date_placeholder">September 30, 2020</string>
    <string name="no_events_message2">Press the + button in the top right to create a new event!</string>
    <string name="no_events_message1">No events for this day!</string>
    <string name="no_geckos_message2">Press the + button in the top right to create a new gecko!</string>
    <string name="no_geckos_message1">You haven\'t added any geckos!</string>
    <string name="no_upcoming_events1">No upcoming events!</string>
    <string-array name="GeckoSpeciesOptions">
        <item>Leopard</item>
        <item>African Fat-Tailed</item>
        <item>Crested</item>
        <item>Gargoyle</item>
        <item>Day</item>
        <item>Lechianus</item>
        <item>Chinese Cave</item>
        <item>Tokay</item>
        <item>Knob-Tailed</item>
        <item>Other</item>
    </string-array>
    <string-array name="GeckoStatusOptions">
        <item>Pet Only</item>
        <item>Breeder</item>
        <item>Special Needs</item>
    </string-array>
    <string-array name="EventTypeOptions">
        <item>Feeding</item>
        <item>Cleaning</item>
        <item>Shedding</item>
        <item>Weighing</item>
        <item>Appointment</item>
        <item>Health</item>
        <item>Breeding</item>
        <item>Other</item>
    </string-array>
</resources>