<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/faded_black"
    android:backgroundTint="@color/faded_black"
    tools:context=".fragment_gecko_data">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/MyGecksHeader_ConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="53dp">

            <TextView
                android:id="@+id/TextView_MyGecks"
                android:layout_width="407dp"
                android:layout_height="50dp"
                android:background="#B7FF9F"
                android:backgroundTint="#B7FF9F"
                android:text="@string/my_gecks"
                android:textAlignment="center"
                android:textColor="#191919"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/InstructionsSection_ConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="79dp">

            <TextView
                android:id="@+id/TextView_MyGecksInstructions1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insert_your_gecko_s_information"
                android:textAlignment="center"
                android:textColor="#D8D8D8"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.266" />

            <TextView
                android:id="@+id/TextView_MyGecksInstructions2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/select_quot_save_quot_to_save_changes_select_quot_cancel_quot_to_go_back"
                android:textColor="#CFCFCF"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TextView_MyGecksInstructions1"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/GeckoDataEntrySection_ConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="651dp">

            <TextView
                android:id="@+id/TextView_PurchasedFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:text="@string/purchased_from"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="#B7B7B7"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TextView_Temperature" />

            <TextView
                android:id="@+id/TextView_Humidity"
                android:layout_width="112dp"
                android:layout_height="22dp"
                android:layout_marginTop="316dp"
                android:layout_marginEnd="72dp"
                android:text="@string/humidity"
                android:textAlignment="textStart"
                android:textColor="#B7B7B7"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/TextView_Temperature"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/TextView_Temperature"
                android:layout_width="113dp"
                android:layout_height="21dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:text="@string/temperature"
                android:textAlignment="textStart"
                android:textColor="#B7B7B7"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TextView_Weight" />

            <TextView
                android:id="@+id/TextView_Morph"
                android:layout_width="94dp"
                android:layout_height="23dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:text="@string/morph"
                android:textAlignment="textStart"
                android:textColor="#A8A8A8"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TextView_Species" />

            <TextView
                android:id="@+id/TextView_Name"
                android:layout_width="102dp"
                android:layout_height="21dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="60dp"
                android:text="@string/name"
                android:textAlignment="textStart"
                android:textColor="#C4C4C4"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/TextView_Birthday"
                android:layout_width="95dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:text="@string/birthday"
                android:textAlignment="textStart"
                android:textColor="#B5B5B5"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TextView_Name" />

            <TextView
                android:id="@+id/TextView_Species"
                android:layout_width="94dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:text="@string/species"
                android:textAlignment="textStart"
                android:textColor="#B7B7B7"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TextView_Birthday" />

            <TextView
                android:id="@+id/TextView_Weight"
                android:layout_width="96dp"
                android:layout_height="23dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:text="@string/weight"
                android:textAlignment="textStart"
                android:textColor="#B7B7B7"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TextView_Morph" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ButtonsSection_ConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="63dp">

            <Button
                android:id="@+id/Button_Cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#E69595"
                android:text="@string/cancel"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/Button_Save"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.484" />

            <Button
                android:id="@+id/Button_Save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.777"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.484" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</FrameLayout>